--- a/lms/src/main/resources/templates/index.html
+++ b/lms/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
     }
 </style>
 </head>
-<body style="height:1500px">
+<body>
 <div class="row">
     <div class="col-sm-2">
     </div>
@@ -119,6 +119,21 @@
                 <p></p>
             </div>
         </nav>
+        <h3>과목리스트</h3>
+		<table border="1">
+			<tr>
+				<th>과목코드</th>
+				<th>과목명</th>
+				<th>NCS 수준</th>
+				<th>등록일</th>
+			</tr>
+			<tr th:each="subject:${list}">
+				<td th:text="${subject.infoLectureCode}"></td>
+				<td th:text="${subject.infoSubjectName}"></td>
+				<td th:text="${subject.infoSubjectDifficulty}"></td>
+				<td th:text="${subject.infoSubjectModificationHistory}"></td>			
+			</tr>
+	</table>
     </div>
     <div class="col-sm-2">
     </div>
