[한병권] 로그인 설정 19-06-17

--- a/lms/src/main/resources/templates/login.html
+++ b/lms/src/main/resources/templates/login.html
@@ -63,7 +63,7 @@
                 <p></p>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">로그인</a>
+                        <a class="nav-link" href="#">로그인</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">회원가입</a>
@@ -119,22 +119,20 @@
                 <p></p>
             </div>
         </nav>
-        <p th:text="${session.memberName}"></p>
-        <h3>과목리스트</h3>
-		<table border="1">
-			<tr>
-				<th>과목코드</th>
-				<th>과목명</th>
-				<th>NCS 수준</th>
-				<th>등록일</th>
-			</tr>
-			<tr th:each="subject:${list}">
-				<td th:text="${subject.infoLectureCode}"></td>
-				<td th:text="${subject.infoSubjectName}"></td>
-				<td th:text="${subject.infoSubjectDifficulty}"></td>
-				<td th:text="${subject.infoSubjectModificationHistory}"></td>			
-			</tr>
-	</table>
+		<form action="/login" method="post">
+			id : 
+			<input type="text" name="memberOnlineId">
+			pw : 
+			<input type="password" name="memberOnlinePw">
+			권한 :
+			<select name="memberRank">
+				<option value="수강생">수강생</option>
+				<option value="강사">강사</option>
+				<option value="교육원">교육원</option>
+				<option value="협회">협회</option>
+			</select>
+			<input type="submit" value="로그인">
+		</form>
     </div>
     <div class="col-sm-2">
     </div>
