[한병권] 강사/교육원 승인코드 이메일 발송 기능 추가

--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -20,6 +20,12 @@
 	            <li class="nav-item">
 	                <a class="nav-link" href="#">내정보</a>
 	            </li>
+	            <li th:if="${session.memberRank == '협회직원'}"  class="nav-item">
+	                <a class="nav-link" href="/sendEmailToTeacher">강사승인코드보내기</a>
+	            </li>
+	            <li th:if="${session.memberRank == '협회직원'}"  class="nav-item">
+	                <a class="nav-link" href="/sendEmailToInstitution">교육원승인코드보내기</a>
+	            </li>
 	        </ul>
 	    </div>
 	</nav>
@@ -71,7 +77,5 @@
 	        <p></p>
 	    </div>
 	</nav>
-
 </header>
-
 </html>
