--- a/lms/src/main/resources/templates/index.html
+++ b/lms/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
 <div layout:fragment="content">
 	<h3>배포일 2019-06-17</h3>
 	<h3>과목리스트</h3>
+	<h3 th:text="${session.memberRank}"></h3>
 	<table border="1">
 		<tr>
 			<th>과목코드</th>
@@ -28,5 +29,5 @@
 			<td th:text="${subject.infoSubjectModificationHistory}"></td>			
 		</tr>
 	</table>
-	</div>
+</div>
 </html>
