--- a/lms/src/main/resources/templates/sendEmailToInstitution.html
+++ b/lms/src/main/resources/templates/sendEmailToInstitution.html
@@ -12,19 +12,11 @@
 </th:block>
 
 <div layout:fragment="content">
-	<form action="/login" method="post">
-		id : 
-		<input type="text" name="memberOnlineId">
-		pw : 
-		<input type="password" name="memberOnlinePw">
-		권한 :
-		<select name="memberRank">
-			<option value="수강생">수강생</option>
-			<option value="강사">강사</option>
-			<option value="교육원">교육원</option>
-			<option value="협회">협회</option>
-		</select>
-		<input type="submit" value="로그인">
+	<h3>교육원 승인 코드 발송</h3>
+	<form action="/sendEmailToInstitution" method="post">
+		E-mail : 
+		<input type="text" name="emailAddress">
+		<input type="submit" value="전송하기">
 	</form>
 </div>
 </html>
