[유하람] infoLecture 리스트 출력
- infoLecture 리스트 출력
- select, option 태그 사용해서 비동기방식으로 처리할 것

--- a/lms/src/main/resources/templates/infoLecture.html
+++ b/lms/src/main/resources/templates/infoLecture.html
@@ -3,26 +3,36 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/default">
 <meta charset="utf-8">
+
+
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
 </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+<script>
+$(document).ready(function(){
+	$('#infoLectureSortList').change(function(){
+		console.log('비동기 요청 진행..');
+	});
+});
+	
+</script>
 </th:block>
 
-<div layout:fragment="content">
+<!-- infoLecture 리스트 출력화면 -->
+<div style="overflow:auto;" layout:fragment="content">
+
 	<h1>강의 개요 list</h1>
-	<table border="1">
-		<tr>
-			<th>강의분류</th>
-			<th>강의표준명</th>
-			<th>필요조건</th>
-		</tr>
-		<tr th:each="subject:${list}">
-			<td></td>
-		</tr>
+	<select id="infoLectureSortList">
+		<option value="">--강의항목선택--</option>
+		<option th:each="lecSort:${sortList}" th:text="${lecSort.infoLectureSort}" th:value="${lecSort.infoLectureSort}"></option>
+	</select>
 	
-	</table>
+	<select id="infoLectureNameList">
+		<option value="">--강의표준명--</option>
+	</select>
+
 </div>
 </html>
