[한병권] Layout 분류 완료

--- a/lms/src/main/resources/templates/fragments/footer.html
+++ b/lms/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <footer th:fragment="footerFragment">
-
+	<nav class="navbar navbar-expand-sm bg-light navbar-light">
+	    <div class="container-fluid">
+	        <p></p>
+	        <ul class="nav navbar-nav navbar-right">
+	            <li class="nav-item">
+	                github 주소 : 
+	            </li>
+	            <li class="nav-item">
+	                <a href="https://github.com/hailee21/team3Project">https://github.com/hailee21/team3Project</a>
+	            </li>
+	        </ul>
+	        <p></p>
+	    </div>
+	</nav>
 </footer>
-
 </html>
