--- a/lms/src/main/resources/templates/LEIndex.html
+++ b/lms/src/main/resources/templates/LEIndex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default">
+      layout:decorator="layout/LELayout">
 <meta charset="utf-8">
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
@@ -10,7 +10,8 @@
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
 </th:block>
-<div layout:fragment="content">
 
+<div layout:fragment="content">
+<h3 th:text="'안녕하세요 '+${institutionName}+' 입니다.'"></h3>
 </div>
 </html>
