--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -20,18 +20,12 @@
 	            <li class="nav-item">
 	                <a class="nav-link" href="#">내정보</a>
 	            </li>
-	            <li th:if="${session.memberRank == '협회직원'}"  class="nav-item">
-	                <a class="nav-link" href="/sendEmailToTeacher">강사승인코드보내기</a>
-	            </li>
-	            <li th:if="${session.memberRank == '협회직원'}"  class="nav-item">
-	                <a class="nav-link" href="/sendEmailToInstitution">교육원승인코드보내기</a>
-	            </li>
 	        </ul>
 	    </div>
 	</nav>
 	<div class="container-fluid container bg-info text-white" style="height: 250px">
 	    <p style="height: 100px"></p>
-	    <p style="font-size: 30px">3팀 평생 교육원 협회</p>
+	    <p><a style="font-size: 30px" class="text-white" th:href="@{'/LEIndex?institutionCode='+${institutionCode}}" th:text="${institutionName}"></a></p>
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 	    <div class="container-fluid">
@@ -39,25 +33,25 @@
 	        <ul class="nav navbar-nav navbar-center">
 	            <li class="nav-item">
 	                <div class="dropdownatuo">
-	                    <button class="dropbtn">협회소개 
+	                    <button class="dropbtn">교육원소개
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">협회소개1</a>
-	                        <a href="#">협회소개2</a>
-	                        <a href="#">협회소개3</a>
+	                        <a href="#">교육원소개1</a>
+	                        <a href="#">교육원소개2</a>
+	                        <a href="#">교육원소개3</a>
 	                    </div>
 	                </div>
 	            </li>
 	            <li class="nav-item">
 	                <div class="dropdownatuo">
-	                    <button class="dropbtn">교육원소개 
+	                    <button class="dropbtn">강의소개
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">교육원소개 1</a>
-	                        <a href="#">교육원소개 2</a>
-	                        <a href="#">교육원소개 3</a>
+	                        <a href="#">강의소개 1</a>
+	                        <a href="#">강의소개 2</a>
+	                        <a href="#">강의소개 3</a>
 	                    </div>
 	                </div>
 	            </li>
