--- a/lms/src/main/resources/templates/layout/associationLayout.html
+++ b/lms/src/main/resources/templates/layout/associationLayout.html
@@ -4,13 +4,15 @@
 <head th:replace="fragments/config :: configFragment"></head>
 <div class="row">
     <div class="col-sm-2">
+    	<header th:replace="fragments/associationSider :: siderFragment"></header>
     </div>
     <div class="col-sm-8">
-	<header th:replace="fragments/header :: headerFragment"></header>
 	
 	<div layout:fragment="content"></div>
 	
 	<footer th:replace="fragments/footer :: footerFragment"></footer>
 	</div>
+	<div class="col-sm-2">
+    </div>
 </div>
 </html>
