--- a/lms/src/main/resources/templates/login.html
+++ b/lms/src/main/resources/templates/login.html
@@ -12,8 +12,8 @@
 </th:block>
 
 <div layout:fragment="content">
-	<div class="row">
-		<div class="col-sm-3">
+	<div class="row" >
+		<div class="col-sm-3" style="height:600px">
 			<h4>수강생 로그인</h4>
 			<form action="/login" method="post">
 				id : 
