[한병권] 오후작업 설정

--- a/lms/src/main/resources/templates/infoSubject/infoSubject.html
+++ b/lms/src/main/resources/templates/infoSubject/infoSubject.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default">
+      layout:decorator="layout/LELayout">
 <meta charset="utf-8">
 <title>강의 과목</title>
 <!-- index.html 고유 CSS 추가 -->
