[한병권] Layout 수정

--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/instituteLayout">
+      layout:decorator="layout/institutionLayout">
 <meta charset="utf-8">
 <!-- html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
