--- a/lms/src/main/resources/templates/teacher/teacherLogin.html
+++ b/lms/src/main/resources/templates/teacher/teacherLogin.html
@@ -17,15 +17,14 @@
 </th:block>
 
 <div layout:fragment="content">
-	<h4>강사 로그인</h4>
-	<form action="/teacherLogin" method="post">
-		id : 
-		<input type="text" value="id010" name="memberOnlineId">
-		<br>
-		pw : 
-		<input type="password" value="pw010" name="memberOnlinePw">
-		<br>
-		<input type="submit" value="로그인">
-	</form>
+	<div>
+		<p style="height: 100px"></p>
+		<h4>강사 로그인</h4>
+		<form action="/teacherLogin" method="post">
+			<pre>id	<input type="text" value="id010" name="memberOnlineId"><br>pw	<input type="password" value="pw010" name="memberOnlinePw"><br></pre>
+			<input type="submit" value="로그인">
+		</form>
+		<p style="height: 300px"></p>
+	</div>
 </div>
 </html>
