--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
 	        </ul>
 	        <ul th:if="${session.memberName != null}" class="nav navbar-nav navbar-right">
 	            <li class="nav-item">
-	                <a class="nav-link" href="">로그아웃</a>
+	                <a class="nav-link" href="/logout">로그아웃</a>
 	            </li>
 	            <li class="nav-item">
 	                <a class="nav-link" href="#">내정보</a>
