--- a/lms/src/main/resources/templates/association/infoAnnualFee/addInfoAnnualFee.html
+++ b/lms/src/main/resources/templates/association/infoAnnualFee/addInfoAnnualFee.html
@@ -13,7 +13,7 @@
 
 <div layout:fragment="content">
 	<h3>연회비 리스트</h3>
-	<a type="button" href="/associationAddInfoAnnualFee" class="btn btn-primary">연회비 개요 추가</a>
+	<a type="button" href="/LEIndex?institutionCode=I1" class="btn btn-primary">연회비 개요 추가</a>
 	<table class="table">
 		<thead>
 			<tr>
@@ -27,28 +27,6 @@
 				<td th:text="${list.infoAnnualFeeDescription}"></td>
 				<td th:text="${list.infoAnnualFeePrice}"></td>
 				<td th:text="${list.infoAnnualFeeEstablishmentDate}"></td>		
-			</tr>
-		</tbody>
-	</table>
-	<br>
-	<br>
-	<h3>교육원 사용여부 확인</h3>
-	<a type="button" href="/associationAddInfoAnnualFee" class="btn btn-primary">사용여부 새로고침</a>
-	<table class="table">
-		<thead>
-			<tr>
-				<th>교육원 이름</th>
-				<th>사용권 시작일</th>
-				<th>사용권 종료일</th>			
-				<th>남은일</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>	
 			</tr>
 		</tbody>
 	</table>
