--- a/lms/src/main/resources/templates/fragments/associationSider.html
+++ b/lms/src/main/resources/templates/fragments/associationSider.html
@@ -5,7 +5,7 @@
 <div class="sidenav">
 	<a href="/associationIndex">협회</a>
 	<a href="/associationInfoAnnualFeeList">연회비 관리하기</a>
-	<a href="#clients">Clients</a>
+	<a href="/associationRefundPolicyList">환불정책 관리하기</a>
 	<a href="#contact">Contact</a>
 </div>
 </header>
