--- a/lms/src/main/resources/templates/institution/infoLecture/infoLecture.html
+++ b/lms/src/main/resources/templates/institution/infoLecture/infoLecture.html
@@ -5,17 +5,21 @@
 <meta charset="utf-8">
 <!-- html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </th:block>
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">]
 <script>
 $(document).ready(function(){
+	// 강의항목 선택
 	$('#infoLectureSortList').change(function(){
 		console.log('비동기 요청 진행..');
-		console.log($('#infoLectureSortList').val());
+		console.log('infoLectureSortList: '+ $('#infoLectureSortList').val());
 		
-		// 강의표준명 option 출력을 위한 비동기방식 시작
+		// 강의표준명 option(nameList) 출력을 위한 비동기방식 시작
 		$.ajax({
 			url:'/getInfoLectureNameList'
 			,data:{lectureSort:$('#infoLectureSortList').val()}
@@ -23,12 +27,39 @@ $(document).ready(function(){
 			,dataType:'json'
 			,success:function(result){
 				$('#infoLectureNameList').empty();
+				$('#infoLectureNameList').append('<option value="">----</option>');
 				$(result).each(function(i, item){
-					$('#infoLectureNameList').append('<option value="'+item.infoLectureCode+'">'+item.infoLectureName+'</option>')
+					$('#infoLectureNameList').append('<option value="'+item.infoLectureCode+'">'+item.infoLectureName+'</option>');
 				});
-				console.log($('#infoLectureNameList').val());
 			}
 		});		
+	});
+	//강의표준명 선택
+	$('#infoLectureNameList').change(function(){
+		console.log('infoLectureCode: '+ $('#infoLectureNameList').val());	
+	});	
+	// 과목 출력
+	document.getElementById("searchSubject").addEventListener("click", function(){
+			if(document.getElementById("infoLectureNameList").value ==""){		
+				alert("강의표준명을 선택하여 주십시오");
+			} else{
+				// 강의표준명 option 선택 후 과목리스트 출력을 위한 비동기방식 시작
+				$.ajax({
+					url:'/getSubjectList'
+					,data:{lectureCode:$('#infoLectureNameList').val()}
+					,type:'Post'
+					,dataType:'json'
+					,success:function(result){
+						$('#subjectList').empty();
+						$('#subjectList').append('<thead><tr><th>과목명</th><th>난이도</th></tr></thead><tbody>');
+						$(result).each(function(i, item){
+							$('#subjectList').append('<tr><td>'+item.infoSubjectName+'</td><td>'+item.infoSubjectDifficulty+'</td></tr>');
+						});
+						$('#subjectList').append('</tbody>');
+					}
+				});
+			}
+			console.log("과목조회버튼 클릭..");
 	});
 });
 </script>
@@ -45,5 +76,11 @@ $(document).ready(function(){
 		<select id="infoLectureNameList">
 			<option value="">--강의표준명--</option>
 		</select>
+		
+		<button id="searchSubject" type="button">조회</button><br><br>
+		
+		<!-- 과목리스트 출력을 위한 table 태그 -->
+		<table id="subjectList" class="table table-striped">
+		</table>
 </div>
 </html>
