--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -12,6 +12,8 @@
 </th:block>
 
 <div layout:fragment="content">
-
+	<h1>조회</h1>
+	<a href="/institution/infoLecture/infoLecture">과목 조회</a>
+	<a href="/institution/#">강의 조회</a>
 </div>
 </html>
