--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
 	                <a class="nav-link" th:href="@{'/login?institutionCode='+${institutionCode}}">로그인</a>
 	            </li>
 	            <li class="nav-item">
-	                <a class="nav-link" href="#">회원가입</a>
+	                <a class="nav-link" href="join">회원가입</a>
 	            </li>
 	        </ul>
 	        <ul th:if="${session.memberName != null}" class="nav navbar-nav navbar-right">
