--- a/lms/src/main/resources/templates/fragments/institutionSider.html
+++ b/lms/src/main/resources/templates/fragments/institutionSider.html
@@ -3,8 +3,8 @@
 <meta charset="utf-8">
 <header th:fragment="siderFragment">
 <div class="sidenav">
-	<a href="#about">교육원</a>
-	<a href="#services">Services</a>
+	<a href="/institutionIndex">교육원</a>
+	<a href="/institutionAvailableInstitution">교육원 사용권한 관리</a>
 	<a href="#clients">Clients</a>
 	<a href="#contact">Contact</a>
 </div>
