--- a/lms/src/main/resources/templates/association/refundPolicy/addRefundPolicyLicense.html
+++ b/lms/src/main/resources/templates/association/refundPolicy/addRefundPolicyLicense.html
@@ -14,6 +14,7 @@
 		//유효성 검사을 위한 변수 선언
 		let refundPolicyNameCheck = true;
 		let refundPolicyDescriptionCheck = true;
+		let refundPolicyPercentageCheck = true;
 		
 		//refundPolicyName 입력 유효성 검사
  		$('#refundPolicyName').blur(function() {
@@ -38,16 +39,30 @@
 			}
  		});
  		
+ 		//refundPolicyPercentage 입력 유효성 검사
+ 		$('#refundPolicyPercentage').blur(function() {
+			if($('#refundPolicyPercentage').val() == "") {
+				console.log('refundPolicyPercentage 공백입력')
+				refundPolicyPercentageCheck = true;
+			} else {
+                console.log('refundPolicyPercentage 유효성 검사 완료')
+				refundPolicyPercentageCheck = false;
+			}
+ 		});
+ 		
  		//btnAdd 클릭 이벤트 처리
 		$('#btnAdd').on('click',function() {
 			if(refundPolicyNameCheck) {
 				$('h4').addClass('red');
-				$('h4').text('연회비 환불정책 명이 공백 상태 입니다.');
+				$('h4').text('자격시험 환불정책 명이 공백 상태 입니다.');
 			} else if(refundPolicyDescriptionCheck) {
 				$('h4').addClass('red');
-				$('h4').text('연회비 환불정책 상세내용이 공백 상태 입니다.');
+				$('h4').text('자격시험 환불정책 상세내용이 공백 상태 입니다.');
+			} else if(refundPolicyPercentageCheck) {
+				$('h4').addClass('red');
+				$('h4').text('자격시험 환불률이  공백 상태 입니다.');
 			} else {
-				$('#addPolicy').submit
+				$('#addPolicy').submit()
 			}
 		});
 	});
@@ -55,18 +70,21 @@
 </th:block>
 
 <div layout:fragment="content">
-	<h3>자격증 환불정책 추가</h3>
+	<h3>자격시험 환불정책 추가</h3>
 	<form id="addPolicy" action="/addRefundPolicy" method="post">
 		<div class="form-group">
-			<label>연회비 환불정책 명:</label>
+			<label>자격시험 환불정책 명 :</label>
 			<input type="text" class="form-control" id="refundPolicyName" name="refundPolicyName">
 		</div>
 		<div class="form-group">
-			<label>연회비 환불정책 상세내용:</label>
+			<label>자격시험 환불정책 상세내용 :</label>
 			<input type="text" class="form-control" id="refundPolicyDescription" name="refundPolicyDescription">
 		</div>
-		<input type="hidden" id="refundPolicyPercentage" name="refundPolicyPercentage" value="0">
-		<input type="hidden" id="refundPolicyType" name="refundPolicyType" value="연회비 환불">
+		<div class="form-group">
+			<label>자격시험 환불률 :</label>
+			<input type="text" class="form-control" id="refundPolicyPercentage" name="refundPolicyPercentage">
+		</div>
+		<input type="hidden" id="refundPolicyType" name="refundPolicyType" value="자격시험 환불">
 		<button type="button" id="btnAdd" class="btn btn-primary">연회비 환불정책 추가</button>
 		<h4></h4>
 	</form>
