[유하람] 과목조회 완료 / 수강생이 과목조회 이후 로그인 시 에러 해결
- header수정 - 수강생이 과목조회 가능
- 수강생 과목조회 시 교육원코드, 교육원명 같이 이동

- 수강생 과목조회 페이지에서 로그인 시 교육원코드 넘겨받지 못하는 에러 해결
(indexMapper -> InfoLectureController)

--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -52,6 +52,7 @@
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
+	                    	<a th:href="@{'/LE/Lecture/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
 	                        <a href="#">강의소개 1</a>
 	                        <a href="#">강의소개 2</a>
 	                        <a href="#">강의소개 3</a>
