--- a/lms/src/main/resources/templates/institution/Lecture/subjectList.html
+++ b/lms/src/main/resources/templates/institution/Lecture/subjectList.html
@@ -5,9 +5,6 @@
 <meta charset="utf-8">
 <!-- html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </th:block>
 
 <!-- html 고유 스크립트 추가 -->
@@ -81,6 +78,18 @@ $(document).ready(function(){
 		
 		<!-- 과목리스트 출력을 위한 table 태그 -->
 		<table id="subjectList" class="table table-striped">
+			<thead>
+				<tr>
+					<th>과목명</th>
+					<th>난이도</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td></td>	
+					<td></td>
+				</tr>
+			</tbody>
 		</table>
 </div>
 </html>
