--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -12,6 +12,8 @@
 </th:block>
 
 <div layout:fragment="content">
-
+	<h1>조회</h1>
+	<a href="/association/Lecture/subjectList">과목 조회</a>
+	<a href="/association">강의 조회</a>
 </div>
 </html>
