--- a/lms/src/main/resources/templates/institution/annualFee/paymentAnnualFee.html
+++ b/lms/src/main/resources/templates/institution/annualFee/paymentAnnualFee.html
@@ -11,44 +11,10 @@
 <th:block layout:fragment="script">
 <script>
 	$(document).ready(function() {
-		//유효성 검사을 위한 변수 선언
-		let refundPolicyNameCheck = true;
-		let refundPolicyDescriptionCheck = true;
-		
-		//refundPolicyName 입력 유효성 검사
- 		$('#refundPolicyName').blur(function() {
-			if($('#refundPolicyName').val() == "") {
-				console.log('refundPolicyName 공백입력')
-				refundPolicyNameCheck = true;
-			} else {
-                console.log('refundPolicyName 유효성 검사 완료')
-				refundPolicyNameCheck = false;
-			}
-			
- 		});
-		
- 		//refundPolicyDescription 입력 유효성 검사
- 		$('#refundPolicyDescription').blur(function() {
-			if($('#refundPolicyDescription').val() == "") {
-				console.log('refundPolicyDescription 공백입력')
-				refundPolicyDescriptionCheck = true;
-			} else {
-                console.log('refundPolicyDescription 유효성 검사 완료')
-				refundPolicyDescriptionCheck = false;
-			}
- 		});
  		
  		//btnAdd 클릭 이벤트 처리
-		$('#btnAdd').on('click',function() {
-			if(refundPolicyNameCheck) {
-				$('h4').addClass('red');
-				$('h4').text('연회비 환불정책 명이 공백 상태 입니다.');
-			} else if(refundPolicyDescriptionCheck) {
-				$('h4').addClass('red');
-				$('h4').text('연회비 환불정책 상세내용이 공백 상태 입니다.');
-			} else {
-				$('#addPolicy').submit()
-			}
+		$('#btnPay').on('click',function() {
+				$('#paymentAnnualFee').submit()
 		});
 	});
 </script>
@@ -59,29 +25,31 @@
 	<form id="paymentAnnualFee" action="/paymentAnnualFee" method="post">
 		<div class="form-group">
 			<label>교육원 명 :</label>
-			<input type="text" class="form-control" id="institutionName" name="institutionName" value="${session.institutionName}" readonly="readonly">
+			<input type="text" class="form-control" id="institutionName" name="institutionName" th:value="${session.institutionName}" readonly="readonly">
 		</div>
 		<div class="form-group">
 			<label>연회비 결재금액 :</label>
-			<input type="text" class="form-control" id="paymentAnnualFeePrice" name="paymentAnnualFeePrice" value="${infoAnnualFee.infoAnnualFeePrice}" readonly="readonly">
+			<input type="text" class="form-control" id="paymentAnnualFeePrice" name="paymentAnnualFeePrice" th:value="${infoAnnualFee.infoAnnualFeePrice}" readonly="readonly">
 		</div>
 		<div class="form-group">
 			<label>사용권 시작일 :</label>
-			<input type="text" class="form-control" id="paymentAnnualFeePrice" name="paymentAnnualFeePrice" value="${infoAnnualFee.infoAnnualFeePrice}" readonly="readonly">
+			<input type="text" class="form-control" id="paymentAnnualFeeServiceStartDate" name="paymentAnnualFeeServiceStartDate" th:value="${now}" readonly="readonly">
 		</div>
 		<div class="form-group">
 			<label>사용권 종료일 :</label>
-			<input type="text" class="form-control" id="paymentAnnualFeePrice" name="paymentAnnualFeePrice" value="${infoAnnualFee.infoAnnualFeePrice}" readonly="readonly">
+			<input type="text" class="form-control" id="paymentAnnualFeeServiceEndDate" name="paymentAnnualFeeServiceEndDate" th:value="${oneYearLaterDay}" readonly="readonly">
 		</div>
 		<div class="form-group">
 				<label>결제 방법 :</label>
-				<select class="form-control" id="refundPolicyType" name="refundPolicyType">
+				<select class="form-control" id="paymentAnnualFeeMethod" name="paymentAnnualFeeMethod">
 					<option>결제 방법 선택</option>
 					<option value="카드">카드</option>
 					<option value="계좌이체">계좌이체</option>
 				</select>
 			</div>	
-		<input type="hidden" id="institutionCode" name="institutionCode" value="${session.institutionCode}">
+		<input type="hidden" id="institutionCode" name="institutionCode" th:value="${session.institutionCode}">
+		<input type="hidden" id="infoAnnualFeeCode" name="infoAnnualFeeCode" th:value="${infoAnnualFee.infoAnnualFeeCode}">
+		<input type="hidden" id="paymentAnnualFeePrice" name="paymentAnnualFeePrice" th:value="${infoAnnualFee.infoAnnualFeeCode}">
 		<button type="button" id="btnPay" class="btn btn-primary">결제하기</button>
 		<h4></h4>
 	</form>
