--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -12,7 +12,7 @@
 </th:block>
 
 <div layout:fragment="content">
-	<h1>조회</h1>
+	<h1>교육원 : 강의관리</h1>
 	<a href="/institution/Lecture/subjectList">과목 조회</a>
 	<a href="/institution/#">강의 조회</a>
 </div>
