[나현주] css api 변경

--- a/lms/src/main/resources/templates/rootIndex.html
+++ b/lms/src/main/resources/templates/rootIndex.html
@@ -25,7 +25,7 @@
 		<h4>교육원 바로가기</h4>
 		<p>수강생들이 사용하는 페이지</p>
 		<div class="btn-group btn-group-lg">
-			<a type="button" href="/LEIndex?institutionCode=I1" class="btn btn-primary">전주평생교육원</a>
+			<a type="button" href="/LEIndex?institutionCode=I1" class="btn btn-primary">전주평생교육원</button>
 			<a type="button" href="/LEIndex?institutionCode=I2" class="btn btn-primary">서울평생교육원</a>
 			<a type="button" href="/LEIndex?institutionCode=I3" class="btn btn-primary">성남평생교육원</a>
 			
