--- a/lms/src/main/resources/templates/fragments/config.html
+++ b/lms/src/main/resources/templates/fragments/config.html
@@ -5,7 +5,7 @@
 <head th:fragment="configFragment">
     <meta charset="utf-8">
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sandstone/bootstrap.min.css">
 	<style>				
 
 		p {
