--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -15,15 +15,21 @@
 	<h1>협회 : 강의관리</h1>
 	<h3>강의 관리</h3>
 	<ul>
-		<li><a href="/association/Lecture/addLecture">강의,과목 등록</a></li>
-		<li><a href="/association/Lecture/subjectList">강의,과목 조회</a></li>
-		<li><a href="/association/Lecture/modifyLecture">강의,과목 관리</a></li>
+		<li><a href="/association/subject/addSubject">과목 등록</a></li>
+		<li><a href="/association/subject/subjectList">과목 조회</a></li>
+		<li><a href="/association/subject/modifySubject">과목 관리</a></li>
 	</ul>
 	<h3>교육원 관리</h3>
 	<ul>
-		<li><a href="/association/classroom/addClassroom">교육원 등록</a></li>
-		<li><a href="/association/classroom/classroomList">교육원 조회</a></li>
-		<li><a href="/association/classroom/modifyClassroom">교육원 관리</a></li>
+		<li><a href="/association/institution/addInstitution">교육원 등록</a></li>
+		<li><a href="/association/institution/institutionList">교육원 조회</a></li>
+		<li><a href="/association/institution/modifyInstitution">교육원 관리</a></li>
+	</ul>
+	<h3>강의실 관리</h3>
+	<ul>
+		<li><a href="/association/classroom/addClassroom">강의실 등록</a></li>
+		<li><a href="/association/classroom/classroomList">강의실 조회</a></li>
+		<li><a href="/association/classroom/modifyClassroom">강의실 관리</a></li>
 	</ul>
 	
 </div>
