--- a/lms/src/main/resources/templates/institution/annualFee/paymentAnnualFee.html
+++ b/lms/src/main/resources/templates/institution/annualFee/paymentAnnualFee.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="form-group">
 			<label>사용권 시작일 :</label>
-			<input type="text" class="form-control" id="paymentAnnualFeeServiceStartDate" name="paymentAnnualFeeServiceStartDate" th:value="${now}" readonly="readonly">
+			<input type="text" class="form-control" id="paymentAnnualFeeServiceStartDate" name="paymentAnnualFeeServiceStartDate" th:value="${startDay}" readonly="readonly">
 		</div>
 		<div class="form-group">
 			<label>사용권 종료일 :</label>
