--- a/lms/src/main/resources/templates/member/memberInsertForm.html
+++ b/lms/src/main/resources/templates/member/memberInsertForm.html
@@ -125,7 +125,7 @@
 				교육원
 			</td>
 			<td>
-				<select name="교육원 선택">
+				<select name="institutionCode">
 					<option value="">--교육원선택--</option>
 					<option value="I1" name="I1">전주평생교육원</option>
 					<option value="I2" name="I2">서울평생교육원</option>
@@ -134,7 +134,6 @@
 					<option value="I5" name="I5">광주평생교육원</option>
 					<option value="I6" name="I6">구미평생교육원</option>
 				</select>
-				<input type="hidden" name="optionValue">
 			</td>
 		</tr>
 		<tr>
