[유하람] searchInstitution.html 강의실 입력을 위한 교육원 검색
- lectureMapper에서 institution 정보 select
- 이를 classroomService, classroomController, restClassroomController에서 사용
- 체크박스의 값을 교육원 코드로 가지며 선택시 addClassroom.html로 이동하도록 한다

--- a/lms/src/main/resources/templates/association/classroom/addClassroom.html
+++ b/lms/src/main/resources/templates/association/classroom/addClassroom.html
@@ -11,10 +11,11 @@
 <th:block layout:fragment="script">
 <script>
 $(document).ready(function(){
-	// 교육원 조회
 	$('#searchInstitution').click(function(){
-		
-	});
+		location.href="/association/classroom/searchInstitution";
+		console.log("교육원찾기 버튼 클릭..");
+	});	
+	
 	// 수용인원 폼 유효성검사
 });
 </script>
